--- a/instructions/index.html
+++ b/instructions/index.html
@@ -1,13 +1,15 @@
 <html>
 <head>
-	<title>Making a GML Field Recorder</title>
+	<title>uTagger - GML Field Recorder</title>
 	<link href='http://fonts.googleapis.com/css?family=Monofett|Cedarville+Cursive' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
 
 <div class="header">
-	<h1>GML Field Recorder</h1>
+	<img id="logo" src="logo2.png"/>
+	<br/>
+	<span id="subtitle">GML Field Recorder</span>
 </div>
 
 <div class="heading">
@@ -16,7 +18,7 @@
 
 <div class="content">
 
-So you wanna make a field recorder. Great. First things first: you need to buy some electronics. The challenge says: 
+So you wanna make a &mu;Tagger GML Field Recorder? Great. First things first: you need to buy some electronics. The challenge says: 
 
 <p>
 <em>Material costs for the field device must not exceed 300 euros. Computers and equipment outside of the 300 euros can be used for non-field activities (such as downloading and manipulating data captured in-field), but at the time of capture a graffiti writer should have no more than 300 euros worth of equipment on him or herself.</em>
